--- a/langgraph/langgraph_intro.ipynb
+++ b/langgraph/langgraph_intro.ipynb
@@ -30,13 +30,12 @@
     "edges\n",
     "nodes\n",
     "invoke\n",
-    "stategraph()\n",
-    "\n"
+    "stategraph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "a9f6e954",
    "metadata": {},
    "outputs": [],
@@ -47,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "97d1f19e",
    "metadata": {},
    "outputs": [],
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "15cef78c",
    "metadata": {},
    "outputs": [],
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "id": "01edcb93",
    "metadata": {},
    "outputs": [
@@ -79,7 +78,7 @@
        "'sunny from first function'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "10399a00",
    "metadata": {},
    "outputs": [
@@ -100,7 +99,7 @@
        "'savita savita from second function'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,20 +110,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "7e01384d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'langgraph'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlanggraph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Graph\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'langgraph'"
+     ]
+    }
+   ],
    "source": [
     "from langgraph.graph import Graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "5c37aea4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Graph' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m workflow1\u001b[38;5;241m=\u001b[39mGraph()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Graph' is not defined"
+     ]
+    }
+   ],
    "source": [
     "workflow1=Graph()"
    ]
@@ -682,7 +705,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -696,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
